# BioForge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  V2_ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
src/bioforge/: __init__.py
src/bioforge/agent/: __init__.py  client.py  hooks.py  memory.py  router.py  sessions.py  streaming.py  system_prompts.py  tools_registry.py
src/bioforge/agent/sub_agents/: __init__.py  assembly_agent.py  pipeline_agent.py  sequence_agent.py
src/bioforge/api/: app.py  deps.py
src/bioforge/api/routers/: agents.py  modules.py  pipelines.py  projects.py  results.py  search.py  sequences.py  workspaces.py
src/bioforge/core/: config.py  database.py  exceptions.py  security.py  storage.py
src/bioforge/mcp/: server.py
src/bioforge/models/: __init__.py  agent_session.py  base.py  module_registry.py  pipeline.py  pipeline_step.py  project.py  result.py  sequence.py  workspace.py
src/bioforge/modules/: __init__.py  base.py  registry.py
src/bioforge/modules/alignment/: __init__.py  blast_runner.py  module.py  schemas.py
src/bioforge/modules/alignment/tests/: test_alignment.py
src/bioforge/modules/assembly/: __init__.py  module.py  schemas.py  tools.py
src/bioforge/modules/assembly/core/: combinatorial.py  config.py  evaluator.py  generator.py  models.py  optimizer.py  scorer.py  simulator.py  solver.py  thermo.py
src/bioforge/modules/assembly/core/codon/: __init__.py  cai.py  optimizer.py  tables.py
src/bioforge/modules/assembly/core/constraints/: base.py  composite.py  fragment_length.py  hairpin.py  orthogonality.py  overhang_quality.py
src/bioforge/modules/assembly/core/golden_gate/: __init__.py  domestication.py  enzymes.py  (+2 more)
src/bioforge/modules/assembly/tests/: test_golden_gate.py  test_solver.py
src/bioforge/modules/evo2/: __init__.py  client.py  embeddings.py  module.py  schemas.py  variant_scorer.py
src/bioforge/modules/evo2/tests/: test_evo2.py
src/bioforge/modules/experiments/: __init__.py  module.py  ordering.py  protocols.py
src/bioforge/modules/experiments/tests/: test_experiments.py
src/bioforge/modules/sbol/: __init__.py  module.py  schemas.py
src/bioforge/modules/structure/: __init__.py  client.py  module.py  schemas.py
src/bioforge/modules/structure/tests/: test_structure.py
src/bioforge/modules/variants/: __init__.py  module.py  schemas.py
src/bioforge/modules/variants/tests/: test_variants.py
src/bioforge/pipeline_engine/: dsl.py  executor.py  graph.py  nextflow_bridge.py  validator.py
src/bioforge/pipeline_engine/runners/: docker.py  local.py
src/bioforge/pipeline_engine/templates/: assembly_to_order.py  library_design.py  sequence_characterization.py  variant_analysis.py
src/bioforge/repositories/: base.py  pipeline.py  project.py  result.py  sequence.py  workspace.py
src/bioforge/schemas/: agent.py  module.py  pipeline.py  project.py  result.py  sequence.py  workspace.py
src/bioforge/services/: pipeline.py  project.py  result.py  sequence.py  workspace.py
src/bioforge/ui/: app.py
src/bioforge/ui/pages/: agent.py  assembly.py  pipelines.py  sequences.py
tests/: test_provenance_and_trust.py
tests/test_agent/: test_agent.py
tests/test_api/: test_app.py
tests/test_mcp/: test_mcp_tools.py
tests/test_pipeline_engine/: test_graph.py
tests/test_sbol/: test_sbol.py
(+4 files in other folders)
