[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioforge"
version = "0.1.0"
description = "AI-first bioinformatics platform for pipeline design and execution"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "BioForge Team" }]

dependencies = [
    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "aioboto3>=13",
    "polars>=1.0",
    "structlog>=24",
    "httpx>=0.27",
    # Bioinformatics
    "biopython>=1.84",
    "pydna>=5",
    "primer3-py>=2.0",
    "numpy>=2.0",
    # AI
    "anthropic>=0.40",
    "fastmcp>=2",
    # UI
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.entry-points."bioforge.modules"]
assembly = "bioforge.modules.assembly:AssemblyModule"

[tool.hatch.build.targets.wheel]
packages = ["src/bioforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/bioforge/modules/assembly/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
