[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioforge"
version = "0.2.0"
description = "AI-first bioinformatics platform for pipeline design, DNA assembly, and sequence intelligence"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "BioForge Team" }]

dependencies = [
    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "aioboto3>=13",
    "httpx>=0.27",
    # Bioinformatics
    "biopython>=1.84",
    "primer3-py>=2.0",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    # AI
    "anthropic>=0.40",
    "fastmcp>=2",
    # UI
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.20",
]
gpu = [
    "evo2>=0.2",
    "together>=1.0",
]
all = [
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
]

[project.entry-points."bioforge.modules"]
assembly = "bioforge.modules.assembly:AssemblyModule"
evo2 = "bioforge.modules.evo2:Evo2Module"
structure = "bioforge.modules.structure:StructureModule"
alignment = "bioforge.modules.alignment:AlignmentModule"
variants = "bioforge.modules.variants:VariantModule"
experiments = "bioforge.modules.experiments:ExperimentModule"
sbol = "bioforge.modules.sbol:SBOLModule"

[tool.hatch.build.targets.wheel]
packages = ["src/bioforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/bioforge/modules"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
